<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="@dimen/margen_predeterminado"
    android:windowSoftInputMode="stateAlwaysHidden">

    <!--  inicio de editText Nombre-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconMode="clear_text"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="@dimen/esquinas_redondeadas"
        app:boxCornerRadiusBottomStart="@dimen/esquinas_redondeadas"
        app:boxCornerRadiusTopEnd="@dimen/esquinas_redondeadas"
        app:boxCornerRadiusTopStart="@dimen/esquinas_redondeadas">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:maxLines="1"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <!--  fin de editText-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lytNombre"
        android:layout_marginTop="@dimen/margen_predeterminado"
        app:endIconMode="clear_text"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="@dimen/esquinas_redondeadas"
        app:boxCornerRadiusBottomStart="@dimen/esquinas_redondeadas"
        app:boxCornerRadiusTopEnd="@dimen/esquinas_redondeadas"
        app:boxCornerRadiusTopStart="@dimen/esquinas_redondeadas">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:digits="qwertzuiopasdfghjklyxcvbnmQWERTZUIOPASDFGHJKLYXCVBNM "
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    input para menu desplegable, con las mismas caracteristicas que los anteriores-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytRol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lytApellido"
        android:layout_marginTop="@dimen/margen_predeterminado"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:boxCornerRadiusBottomEnd="@dimen/esquinas_redondeadas"
        app:boxCornerRadiusBottomStart="@dimen/esquinas_redondeadas"
        app:boxCornerRadiusTopEnd="@dimen/esquinas_redondeadas"
        app:boxCornerRadiusTopStart="@dimen/esquinas_redondeadas">

        <!--    declaracion de ACTV para referenciar lyout de textEdit-->
        <AutoCompleteTextView
            android:id="@+id/cmbRol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:focusable="false"
            android:hint="@string/sel_rol"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lytRol"
        android:layout_marginTop="@dimen/margen_predeterminado"
        app:cornerRadius="@dimen/esquinas_redondeadas"
        android:text="@string/enviar_usuario"
        app:icon="@drawable/ic_baseline_person_add"
        app:iconGravity="end"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHistorico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnEnviar"
        android:layout_marginTop="@dimen/margen_predeterminado"
        app:cornerRadius="@dimen/esquinas_redondeadas"
        android:text="@string/mostrar_historico"
        app:icon="@drawable/ic_baseline_history"
        app:iconGravity="end"
        />
</androidx.constraintlayout.widget.ConstraintLayout>